force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/NCMT_Housing_Plan_Summary__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>NCMT Housing Plan Summary for Common Area and Non-Rentable columns for User Defined Housing Plans</description>
    <label>NCMT Housing Plan Summary</label>
    <nameField>
        <displayFormat>HPS-{0000000000}</displayFormat>
        <label>NCMT Housing Plan Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Housing Plan Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>