force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/ADP_high_density_PC_s_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>ADP_high_density_PC_s_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ADP (high density PC’s) Use USF</description>
    <label>ADP (high density PC’s) Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>