force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/ADP_mainframe_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>ADP_mainframe_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ADP (mainframe) Use USF</description>
    <label>ADP (mainframe) Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>