force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Atrium_Ground_floor_plan_area__c.field-meta.xml
<CustomField>
    <fullName>Atrium_Ground_floor_plan_area__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Atrium (Ground floor plan area)</description>
    <label>Atrium (Ground floor plan area)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>