force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Atrium_upper_levels_phantom_floors__c.field-meta.xml
<CustomField>
    <fullName>Atrium_upper_levels_phantom_floors__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Atrium upper levels (phantom floors)</description>
    <label>Atrium upper levels (phantom floors)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>