force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Atrium_upper_levels_phantom_floors_SF__c.field-meta.xml
<CustomField>
    <fullName>Atrium_upper_levels_phantom_floors_SF__c</fullName>
    <description>Atrium upper levels (phantom floors) SF</description>
    <formula>Atrium_Ground_floor_plan_area__c *  Atrium_upper_levels_phantom_floors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Atrium upper levels (phantom floors) SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>