force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Based_on_damped_Cladding_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Based_on_damped_Cladding_Ratio__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Based on damped Cladding Ratio</description>
    <label>Based on damped Cladding Ratio</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>