force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Building2_USF__c.field-meta.xml
<CustomField>
    <fullName>Building2_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Building2 USF</description>
    <label>Building2 USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>