force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Building3_USF__c.field-meta.xml
<CustomField>
    <fullName>Building3_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Building3 USF</description>
    <label>Building3 USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>