force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Child_care_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Child_care_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Child care Use USF</description>
    <label>Child care Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>