force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Climate_controlled_for_artifacts_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Climate_controlled_for_artifacts_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Climate controlled for artifacts Use USF</description>
    <label>Climate controlled for artifacts Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>