force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Closed_offices_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Closed_offices_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Closed offices Use USF</description>
    <label>Closed offices Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>