force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Conditioned_Core_Area__c.field-meta.xml
<CustomField>
    <fullName>Conditioned_Core_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Conditioned Core Area</description>
    <label>Conditioned Core Area</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>