force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Courtroom_district_Standard_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Courtroom_district_Standard_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Courtroom – district Standard Use USF</description>
    <label>Courtroom – district Standard Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>