force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Credit_Union_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Credit_Union_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Credit Union Use USF</description>
    <label>Credit Union Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>