force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Default_Loading_dock_Recycling_Trash__c.field-meta.xml
<CustomField>
    <fullName>Default_Loading_dock_Recycling_Trash__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Default Loading dock/Recycling/Trash</description>
    <label>Default Loading dock/Recycling/Trash</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>