force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Default_Main_Lobby__c.field-meta.xml
<CustomField>
    <fullName>Default_Main_Lobby__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DefaultMain Lobby</description>
    <label>Default Main Lobby</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>