force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Default_Mechanical_Electrical_IT__c.field-meta.xml
<CustomField>
    <fullName>Default_Mechanical_Electrical_IT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Default Mechanical/Electrical/IT</description>
    <label>Default Mechanical/Electrical/IT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>