force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Default_Other_circulation__c.field-meta.xml
<CustomField>
    <fullName>Default_Other_circulation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Default Other circulation</description>
    <label>Default Other circulation</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>