force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Default_Restrooms__c.field-meta.xml
<CustomField>
    <fullName>Default_Restrooms__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Default Restrooms</description>
    <label>Default Restrooms</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>