force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Elevator_lobbies__c.field-meta.xml
<CustomField>
    <fullName>Elevator_lobbies__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Elevator lobbies</description>
    <label>Elevator lobbies</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>