force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Enclosed_Parking__c.field-meta.xml
<CustomField>
    <fullName>Enclosed_Parking__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enclosed Parking</description>
    <label>Enclosed Parking</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>