force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Enhanced_office_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_office_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enhanced office Use USF</description>
    <label>Enhanced office Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>