force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Finpct__c.field-meta.xml
<CustomField>
    <fullName>Finpct__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Finpct</description>
    <label>Finpct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>