force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Ground_floor_circulation__c.field-meta.xml
<CustomField>
    <fullName>Ground_floor_circulation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Ground floor circulation</description>
    <label>Ground floor circulation</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>