force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/High_density_storage_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>High_density_storage_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>High density storage Use USF</description>
    <label>High density storage Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>