force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Interview_Detention_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Interview_Detention_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interview / Detention Use USF</description>
    <label>Interview / Detention Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>