force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Judicial_hearing_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Judicial_hearing_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Judicial hearing Use USF</description>
    <label>Judicial hearing Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>