force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Laboratory_Wet_chemistry_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Wet_chemistry_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Laboratory (Wet/chemistry) Use USF</description>
    <label>Laboratory (Wet/chemistry) Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>