force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Light_Fixtures__c.field-meta.xml
<CustomField>
    <fullName>Light_Fixtures__c</fullName>
    <formula>ROUND(((Main_Lobby__c + Atrium_Ground_floor_plan_area__c)/40),0) + ROUND((Ground_floor_circulation__c/40),0) +
ROUND((Elevator_lobbies__c/40),0) + 
ROUND((Other_circulation__c/50),0) +
ROUND((Restrooms__c/50),0) + 
ROUND((Enclosed_Parking__c/200),0) + 
ROUND((Mechanical_Electrical_IT__c/80),0) +
ROUND((Loading_dock_Recycling_Trash__c/80),0) + 
ROUND((Stair_shafts__c/60),0) + 
IF( TEXT(Project__r.Building_Type__c) == &apos;Utility&apos;, 0 ,  ROUND((Total_USF__c/80),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Light Fixtures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>