force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Non_Marshal_Holding_Cell_Single_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Non_Marshal_Holding_Cell_Single_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Non-Marshal Holding Cell- Single Use USF</description>
    <label>Non-Marshal Holding Cell- Single Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>