force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Other_circulation__c.field-meta.xml
<CustomField>
    <fullName>Other_circulation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Other circulation</description>
    <label>Other circulation</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>