force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Other_vertical_penetrations__c.field-meta.xml
<CustomField>
    <fullName>Other_vertical_penetrations__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Other vertical penetrations</description>
    <label>Other vertical penetrations</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>