force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Override_RSF__c.field-meta.xml
<CustomField>
    <fullName>Override_RSF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Override RSF</description>
    <inlineHelpText>Default Override RSF is 0. 
Enter Override RSF within the range.
Enter value as 0 to Reset to Original.</inlineHelpText>
    <label>Override RSF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>