force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Override_RSF_Range__c.field-meta.xml
<CustomField>
    <fullName>Override_RSF_Range__c</fullName>
    <description>Override RSF range</description>
    <formula>&quot;Between &quot; &amp;  Text(Total_USF__c)
   /* IF(
      Total_USF__c * 1.1 &gt;= 1000000,
      TEXT(FLOOR(Total_USF__c * 1.1 / 1000000)) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    IF(
      Total_USF__c * 1.1 &gt;= 1000,
      RIGHT(TEXT(FLOOR(Total_USF__c * 1.1 / 1000)), 3) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    RIGHT(TEXT(FLOOR(Total_USF__c * 1.1)), 3)*/
&amp; &quot; and &quot; &amp; Text(Total_GSF__c)
    /*IF(
      (Total_USF__c * 1.4)  &gt;= 1000000,
      TEXT(FLOOR((Total_USF__c * 1.4) / 1000000)) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    IF(
      (Total_USF__c * 1.4) &gt;= 1000,
      RIGHT(TEXT(FLOOR((Total_USF__c * 1.4) / 1000)), 3) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    RIGHT(TEXT(FLOOR((Total_USF__c * 1.4))), 3)*/</formula>
    <label>Override RSF Range</label>
    <type>Text</type>
</CustomField>