force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Project_GF__c.field-meta.xml
<CustomField>
    <fullName>Project_GF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Project GF</description>
    <label>Project GF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>