force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Project_USF__c.field-meta.xml
<CustomField>
    <fullName>Project_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Project USF</description>
    <label>Project USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>