force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Sally_Port_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Sally_Port_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sally Port Use USF</description>
    <label>Sally Port Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>