force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Secure_Mailroom_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Secure_Mailroom_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Secure Mailroom Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>