force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Secure_Work_Environment_SWE_Enhd_UseUSF__c.field-meta.xml
<CustomField>
    <fullName>Secure_Work_Environment_SWE_Enhd_UseUSF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Secure Work Environment(SWE) Enhd UseUSF</description>
    <label>Secure Work Environment(SWE) Enhd UseUSF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>