force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Secure_Work_Environment_SWE_Std_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Secure_Work_Environment_SWE_Std_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Secure Work Environment(SWE) Std Use USF</description>
    <label>Secure Work Environment(SWE) Std Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>