force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Total_Floor_openings__c.field-meta.xml
<CustomField>
    <fullName>Total_Floor_openings__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Floor openings</description>
    <label>Total Floor openings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>