force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Total_GSF_w_o_parking__c.field-meta.xml
<CustomField>
    <fullName>Total_GSF_w_o_parking__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total GSF w/o parking</description>
    <label>Total GSF w/o parking</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>