force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Total_RSF__c.field-meta.xml
<CustomField>
    <fullName>Total_RSF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculated Total RSF</description>
    <label>Calculated Total RSF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>