force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Total_USF__c.field-meta.xml
<CustomField>
    <fullName>Total_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total USF</description>
    <label>Total USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>