force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Transaction_counter_space_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Transaction_counter_space_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Transaction counter space Use USF</description>
    <label>Transaction counter space Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>