force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Unfinished_Shell_Area_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Unfinished_Shell_Area_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unfinished Shell Area Use USF</description>
    <label>Unfinished Shell Area Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>