force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Useable_Area__c.field-meta.xml
<CustomField>
    <fullName>Useable_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Useable Area</description>
    <label>Useable Area</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>