force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/User_Defined_Spaces3_Description__c.field-meta.xml
<CustomField>
    <fullName>User_Defined_Spaces3_Description__c</fullName>
    <description>User Defined Spaces3 Description</description>
    <label>User Defined Spaces3 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>