force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/User_Defined_Spaces3_USF_for_DC__c.field-meta.xml
<CustomField>
    <fullName>User_Defined_Spaces3_USF_for_DC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>User Defined Spaces3 $ / USF (for DC)</description>
    <label>User Defined Spaces3 $ / USF (for DC)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>