force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/USMS_Suite_Operations_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>USMS_Suite_Operations_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>USMS Suite: Operations Use USF</description>
    <label>USMS Suite: Operations Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>