force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/VA_Intake_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>VA_Intake_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Medical - Intake Use USF</description>
    <label>Medical - Intake Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>