force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/VA_Radiology_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>VA_Radiology_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Radiology Use USF</description>
    <label>Radiology Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>