force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Vault_Type_Storage_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Vault_Type_Storage_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Vault Type Storage Use USF</description>
    <label>Vault Type Storage Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>