force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/fields/Workstations_open_office_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>Workstations_open_office_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Workstations/open office Use USF</description>
    <label>Workstations/open office Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>