force-app/main/default/objects/NCMT_Housing_Plan_Summary__c/validationRules/RSF_Between_USF_and_GSF.validationRule-meta.xml
<ValidationRule>
    <fullName>RSF_Between_USF_and_GSF</fullName>
    <active>true</active>
    <errorConditionFormula>And(Override_RSF__c  &gt; 0, Or(  Override_RSF__c  &gt; Total_GSF__c, Override_RSF__c &lt; Total_USF__c))</errorConditionFormula>
    <errorMessage>The Total RSF must be greater than the Total USF and less than the Total GSF.</errorMessage>
</ValidationRule>